# sqlproof

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  README.md  SECURITY.md  SPEC.md  index.html  package-lock.json  package.json  pyproject.toml  release-please-config.json  sitemap-0.xml  sitemap-index.xml  tsconfig.json  tsup.config.ts  vitest.config.ts
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  deploy-website.yml  integration.yml  nightly.yml  pr-action-rules.yml  pr-title.yml  release-please.yml  release.yml  uv-lock-refresh.yml
_astro/: MarkdownContent.astro_astro_type_script_index_0_lang.BGoLIRP2.js  MobileMenuToggle.astro_astro_type_script_index_0_lang.D1-hhN0n.js  Search.astro_astro_type_script_index_0_lang.BjGt8Al1.js  Search.astro_astro_type_script_index_0_lang.DyuPVqwj.js  api.BQnzzfqb.css  common.D2YqFyM-.css  index.-zwmQ6Lq.css  index.B0sHWZRA.css  index.BCUZq7SS.js  index.C8-Ur-VV.css  index.DtKahHx0.css  ui-core.MeVe8Ohr.js  ui-core.p_P79_7E.js
api/check-options/: index.html
api/mutation-testing/: index.html
api/sqlproof-class/: index.html
api/state-machine/: index.html
api/table-customization/: index.html
docs/: docs.json  getting-started.mdx  index.mdx  supabase-quickstart.mdx
docs/api/: mutation-testing.mdx  sqlproof-class.mdx  state-machine.mdx
docs/examples/: data-generation.mdx  inbox.mdx  property-patterns.mdx  testing-sql-functions.mdx
docs/guides/: ci-cd.mdx  custom-generators.mdx  local-dev.mdx  mutation-testing.mdx  security.mdx  supabase-rls-bug-classes.mdx  supabase.mdx  vs-pgtap.mdx
examples/data-generation/: index.html
examples/ecommerce/: schema.sql  test_orders.py
examples/inbox/: README.md  index.html
examples/orders/: index.html  orders.test.ts  schema.sql
examples/property-patterns/: index.html
examples/ripenn_scoring/: schema.sql  test_scoring.py
examples/supabase_rls/: README.md  schema.sql  test_rls.pgtap.sql  test_rls.py
examples/testing-sql-functions/: index.html
getting-started/: index.html
guides/ci-cd/: index.html
guides/custom-generators/: index.html
guides/fk-distributions/: index.html
guides/local-dev/: index.html
guides/mutation-testing/: index.html
guides/security/: index.html
guides/supabase/: index.html
guides/supabase-rls-bug-classes/: index.html
guides/vs-pgtap/: index.html
pagefind/: pagefind-entry.json  pagefind.en_15c2aecba6.pf_meta  pagefind.en_1e0897091b.pf_meta  pagefind.en_2a3e23337a.pf_meta  pagefind.en_4b2dd81ba1.pf_meta  pagefind.en_581d6a40a6.pf_meta  pagefind.en_5a64a55c66.pf_meta  pagefind.en_5bf6b1d964.pf_meta  pagefind.en_65ce703441.pf_meta  pagefind.en_6b22e53864.pf_meta  pagefind.en_70edadd7f6.pf_meta  pagefind.en_78bf66a2e4.pf_meta  pagefind.en_8363d07aee.pf_meta  pagefind.en_8ecdf8ed6b.pf_meta  pagefind.en_bbf866a25b.pf_meta  pagefind.en_eb3dd9596b.pf_meta  pagefind.en_f21cd943f7.pf_meta  pagefind.en_f7db275efb.pf_meta  pagefind.en_f8e199e0fc.pf_meta
pagefind/fragment/: en_1013dbd.pf_fragment  en_1098aa6.pf_fragment  en_126ec6a.pf_fragment  en_1283bc5.pf_fragment  en_15d0e3c.pf_fragment  en_165bb81.pf_fragment  en_1811d6e.pf_fragment  en_1865e1c.pf_fragment  en_235925c.pf_fragment  en_268788e.pf_fragment  en_27e3f71.pf_fragment  en_311c744.pf_fragment  en_31ed274.pf_fragment  en_37829af.pf_fragment  en_3857f17.pf_fragment  en_38d2118.pf_fragment  en_3b763af.pf_fragment  en_407f41c.pf_fragment  en_44b7c7b.pf_fragment  en_44de1c3.pf_fragment  en_487826f.pf_fragment  en_498439e.pf_fragment  en_4b2668f.pf_fragment  en_4e3a9ee.pf_fragment  en_5557509.pf_fragment  en_55a7fea.pf_fragment  en_593cd5d.pf_fragment  en_5ad96fe.pf_fragment  en_5ed06b2.pf_fragment  en_5facb5e.pf_fragment  en_61d5156.pf_fragment  en_634f382.pf_fragment  en_6495769.pf_fragment  en_6542294.pf_fragment  en_68d0894.pf_fragment  en_6b674d8.pf_fragment  en_6b92d7a.pf_fragment  en_70e44e9.pf_fragment  en_726e35a.pf_fragment  en_7436e6e.pf_fragment  (+46 more)
pagefind/index/: en_10894d7.pf_index  en_16e32de.pf_index  en_18e3fd7.pf_index  en_20bdfd1.pf_index  en_2422f25.pf_index  en_3434a7c.pf_index  en_3662ff4.pf_index  en_51b75aa.pf_index  en_56a59e2.pf_index  en_58c1a3b.pf_index  en_5cc25a3.pf_index  en_63d7713.pf_index  en_6f6414c.pf_index  en_73c0bc3.pf_index  en_777f487.pf_index  en_8ab2ec6.pf_index  en_8d97733.pf_index  en_b6b3edf.pf_index  en_bf41c2b.pf_index  en_c546a8d.pf_index  en_ca9a90f.pf_index  en_cb30da8.pf_index  en_cde9d61.pf_index  en_ce7c3a5.pf_index  en_d7b87b6.pf_index  en_daa9cd7.pf_index  en_ddbafbc.pf_index  en_de18718.pf_index  en_e2c595a.pf_index  en_e499efe.pf_index  en_eb421c6.pf_index  en_edff7b0.pf_index  en_f8dab08.pf_index  en_fd44133.pf_index
src/: index.ts  sqlproof.ts
src/generators/: column-generators.ts  constraint-handler.ts  dataset-generator.ts  table-generator.ts
src/reporter/: reporter.ts
src/runner/: db-manager.ts  default-value-rewriter.ts  neon-provider.ts  property-runner.ts
src/schema/: dependency-graph.ts  parser.ts  types.ts
src/sqlproof/: __init__.py  _version.py  (+9 more)
supabase-quickstart/: index.html
website/: .env.example  astro.config.mjs  package-lock.json  package.json
(+202 files in other folders)
