[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sqlproof"
version = "0.6.0"
description = "Property-based testing for PostgreSQL schemas and SQL behavior. Pre-1.0; APIs may change between minor versions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SqlProof contributors" }]
keywords = [
  "postgres",
  "postgresql",
  "property-based-testing",
  "hypothesis",
  "sql",
  "rls",
  "testing",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Hypothesis",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Database :: Database Engines/Servers",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]
dependencies = [
  "hypothesis>=6.100",
  "psycopg[binary]>=3.1",
  "pglast>=6.0",
  "rich>=13.0",
]

[project.urls]
Homepage = "https://sqlproof.com"
Documentation = "https://sqlproof.com"
Repository = "https://github.com/alialavia/sqlproof"
Issues = "https://github.com/alialavia/sqlproof/issues"
Changelog = "https://github.com/alialavia/sqlproof/blob/main/CHANGELOG.md"

[project.optional-dependencies]
testcontainers = ["testcontainers[postgres]>=4.0"]
pydantic = ["pydantic>=2.0"]
mcp = ["mcp>=1.27"]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "pytest-xdist",
  "pytest-benchmark",
  "syrupy",
  "mutmut",
  "mypy",
  "pyright",
  "ruff",
  "uv",
  # mcp is also pulled in by `dev` so the test suite can import it
  # without a separate `--extra mcp` flag during local development.
  "mcp>=1.27",
]

[project.entry-points.pytest11]
sqlproof = "sqlproof.pytest_plugin"

[project.scripts]
sqlproof = "sqlproof.cli:main"
sqlproof-mcp = "sqlproof.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlproof"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src/sqlproof"]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["sqlproof"]

[tool.coverage.run]
source = ["src/sqlproof"]
omit = [
  "src/sqlproof/__init__.py",
  "src/sqlproof/_version.py",
  "src/sqlproof/cli.py",
  "src/sqlproof/coverage/plpgsql.py",
  # pytest_plugin.py: most of the file's runtime behavior lives inside
  # fixtures exercised via pytester's subprocess pytest runs, whose
  # coverage isn't captured by the outer pytest-cov without subprocess
  # instrumentation (parallel coverage + .coveragerc tweaks). Lifting
  # this file from omit cleanly is tracked as a follow-up to #5;
  # the CLI flag surface (the main user-facing concern of #5) is now
  # stable and tested via pytester directly.
  "src/sqlproof/pytest_plugin.py",
  "src/sqlproof/reporter/console.py",
  "src/sqlproof/reporter/json_io.py",
  "src/sqlproof/types.py",
]
